[gd_scene load_steps=6 format=3 uid="uid://b7mejsbueubva"]

[ext_resource type="Script" uid="uid://2grdmbycx712" path="res://Scenes/Taskbar/taskbar_button.gd" id="1_j5fdb"]
[ext_resource type="Theme" uid="uid://b3klx57slj0l3" path="res://Art/soft_retro/soft_retro.tres" id="2_o62jr"]
[ext_resource type="Texture2D" uid="uid://bc5d0depbxgf4" path="res://Art/20250420manaSoul9SlicesE-Sheet.png" id="3_babie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hj143"]
bg_color = Color(0.78837454, 0.32080182, 0, 1)
border_color = Color(0.67388546, 0.037262347, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="CanvasTexture" id="CanvasTexture_s4q16"]

[node name="TaskbarButton" type="Control" node_paths=PackedStringArray("texture_rect", "selected_background", "hoverPreviewTexture", "previewNode", "activeBGPanel")]
custom_minimum_size = Vector2(60, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 50.0
pivot_offset = Vector2(30, 25)
mouse_filter = 1
theme = ExtResource("2_o62jr")
script = ExtResource("1_j5fdb")
texture_rect = NodePath("TextureMargin/TextureRect")
selected_background = NodePath("SelectedBackground")
active_color = Color(1, 1, 1, 1)
hoverPreviewTexture = NodePath("PreviewControl/PreviewTexture")
previewNode = NodePath("PreviewControl")
activeBGPanel = NodePath("TextureMargin/Panel")
hiddenColor = Color(0.24953833, 0.29448524, 0.33930677, 1)
maximizedColor = Color(0.9477554, 0.074877344, 0.34408408, 1)
foregroundColor = Color(0.970401, 0.7125469, 0, 1)
backgroundColor = Color(0.7395056, 0.720962, 0.694046, 1)

[node name="PreviewControl" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -103.0
offset_top = -150.0
offset_right = 163.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(133, 150)
mouse_filter = 1

[node name="PreviewBG" type="Panel" parent="PreviewControl"]
modulate = Color(0, 0, 0, 0.5411765)
self_modulate = Color(0, 0, 0, 0.53333336)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_o62jr")

[node name="PreviewTexture" type="TextureRect" parent="PreviewControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 90)
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectedBackground" type="TextureRect" parent="."]
modulate = Color(0, 0.498039, 1, 0.470588)
texture_filter = 1
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
pivot_offset = Vector2(30, 30)
theme = ExtResource("2_o62jr")
texture = ExtResource("3_babie")
expand_mode = 1
stretch_mode = 5

[node name="TextureMargin" type="MarginContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="TextureMargin"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_o62jr")
theme_override_styles/panel = SubResource("StyleBoxFlat_hj143")

[node name="TextureRect" type="TextureRect" parent="TextureMargin"]
self_modulate = Color(0.17254902, 0.16078432, 0.14117648, 0.6666667)
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_o62jr")
texture = SubResource("CanvasTexture_s4q16")
expand_mode = 1
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
